# relayer-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: custody-image.yml
configuration/: anvil.yaml  base.yaml  docker.yaml  goerli.yaml  kovan.yaml  local.yaml  mock.yaml  production.yaml  staging.yaml
docker/: Dockerfile  docker-compose.yaml  run.sh
scripts/: build-docker.sh  run-docker.sh
src/: configuration.rs  contracts.rs  helpers.rs  lib.rs  main.rs  merkle.rs  startup.rs  state.rs  telemetry.rs  tx.rs  tx_checker.rs  tx_sender.rs
src/custody/: account.rs  config.rs  errors.rs  helpers.rs  mod.rs  routes.rs  scheduled_task.rs  service.rs  state.rs  tx_parser.rs  types.rs
src/routes/: fee.rs  info.rs  job.rs  mod.rs  routes.rs  send_transactions.rs  transactions.rs  wallet_screening.rs
src/types/: job.rs  mod.rs  transaction_request.rs  wallet_screening_request.rs
tests/: main.rs
tests/api/: contracts.rs  generator.rs  helpers.rs  main.rs  merkle_tree.rs  mod.rs  sync.rs  transactions.rs  trm.rs  utils.rs
tests/custody/: mod.rs  transfer.rs
tests/data/: deposit.json  events.json  logs.json  r_0x2b1673b1759f7db0480273a6360dee57668ff301c578bc3d5843271d1c818ac7.json  r_0x62a658acb631e785bb4a494781f6411a84bceee685112fbceb3601ded279f6ac.json  receipt.json  transaction.json  tx_vk.json
tests/data/params/: transfer_verification_key.json  tree_verification_key.json
tests/js_test/: package-lock.json  package.json  testEvents.js
