[package]
name = "relayer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "=4.0.1"
actix-http = "=3.0.4"
config = "0.11.0"
serde-aux = "2.3.0"
web3="0.18.0"
tokio={version="1.17", features=["rt","rt-multi-thread","sync"]}
libzeropool = { version = "0.5.3", default-features = false, features = ["in3out127"] }
borsh = "0.9.1"
libzeropool-rs = "0.3.8"
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.1"


[dev-dependencies]
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["macros", "rt"] }
actix-rt = "2.2.0"
reqwest = { version = "0.11.4", default_features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.64"
