[package]
name = "relayer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
reqwest = { version = "0.11.4", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "=4.0.1"
actix-cors="0.6.2"
actix-http = "=3.0.4"
config = "0.11.0"
serde-aux = "2.3.0"
#web3="0.18.0" https://github.com/tomusdrw/rust-web3/pull/651
web3={git = "https://github.com/r0wdy1/rust-web3", branch = "logs_txhash" }
tokio={version="1.17", features=["rt","rt-multi-thread","sync"]}
libzeropool = { git = "https://github.com/zkBob/libzeropool", branch = "multicore-wasm", version = "0.5.6", default-features = false, features = ["in3out127"] }
borsh = "0.9.1"
# libzkbob-rs = {version = "0.7.0", features = ["native"]}
libzkbob-rs = {git = "https://github.com/zkBob/libzkbob-rs", branch = "custody", features = ["native"]}
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.1"
kvdb = "0.9.0"
kvdb-web = { version = "0.9.0", optional = true }
kvdb-memorydb = "0.9.0"
getrandom = { version = "0.2.3" }
sha3 = "0.10.0"
serde_json = "1.0.64"
secp256k1 = "0.21"
ethabi = "17.1.0"
kvdb-rocksdb = "0.11.0"
env_logger = "0.9.0"
memo-parser = {git = "https://github.com/zkBob/memo-parser", branch = "develop"}
# memo-parser = {path = "../memo-parser"}
hex = { version = "0.4.3", features = ["serde"] }
num-bigint = "0.4"
byteorder = "1.4.3"
rayon = "1.5.1"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["macros", "rt"] }
actix-rt = "2.2.0"
reqwest = { version = "0.11.4", default_features = false, features = ["json", "rustls-tls"] }
rand = "0.8.4"
test-case = "1.2.0"
"hex-literal" = "0.3.4"
wiremock = "0.5.14"
